@@ -1,8 +1,13 @@
+<if:view_data>
+  <tag:view_data />
+<else:view_data>
   <p>
-   <gettext>Click to verify download of attachment</gettext>:
+   <gettext>Download attachment</gettext>:
    <a href="<tag:download />"><tag:descrip /></a>
    [<tag:type />] <tag:size />
   </p>
+</else:view_data></if:view_data>
+  <hr />
   <p>
    <a href="<tag:self_link />"><gettext>Return to message view</gettext></a>
   </p>
