@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Add preference to allow viewing of all inline parts by default (MIMP).
 [mms] Add hook to alter composed message details before sending.
 [mms] DIMP now honors the 'allow_resume_all' configuration option.
 [mms] Remove 'sort_limit' configuration option.
